--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   rxdart: ^0.27.7
   equatable: ^2.0.5
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
